--- a/public/css/encabezadoFooter.css
+++ b/public/css/encabezadoFooter.css
@@ -6,6 +6,7 @@
 
 }
 
+
 .logo {
     margin-top: 0px;
     margin-left: 0px;
@@ -106,12 +107,18 @@ footer p {
         margin-left: 100px;
     }
 }
-#icono-user {
-    border: none;
-    background: none;
-    padding: 0;
+
+
+#dropdown{
+    border: none; 
+    background: none; 
+    padding: 0; 
     cursor: pointer;
 }
+
+#dropdown:hover {
+    transform: scale(1.3); /* Aumenta el tamaño al 110% */
+  }
 
 .dropdown-item:hover {
     background-color: #f8f9fa;
