--- a/public/css/principal-nueva.css
+++ b/public/css/principal-nueva.css
@@ -737,7 +737,10 @@ footer p {
         width: 960px;
         margin-left: 340px;
     }
-
+    .authenticated .carousel-container img{
+        height: 600px;
+        width: 400px;
+    }
     .titulo-novedades {
         margin-left: 20px;
         background-size: 8px 1px;
