--- a/public/css/novedades.css
+++ b/public/css/novedades.css
@@ -44,7 +44,32 @@
 .no-role .novedades-titulo {
     margin-top: 150px;
 }
+#asignar-btn {
+    background: linear-gradient(90deg, rgba(199, 218, 233, 0.88) 0%, #5098CD 0.01%, #357AAB 46.5%, #3D83B5 85.5%);
+    padding: 8px 12px 8px 12px;
+    gap: 10px;
+    border-radius: 8px;
+    opacity: 0px;
+    box-shadow: 0px 4px 4.6px 0px rgba(0, 0, 0, 0.25);
+    border: none;
+    font-family: Calibri, sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 16.8px;
+    letter-spacing: -0.03em;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: rgba(245, 245, 245, 1);
+    height: 40px;
+}
+#asignar-btn:hover {
+    background: var(--HOVER, rgba(33, 102, 153, 1));
+}
 
+#asignar-btn:active {
+    background: rgba(100, 161, 206, 1);
+}
 /* Botones */
 .novedades-botones-cards {
     display: flex;
