--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -398,8 +398,18 @@ table thead th {
 .pagination {
     margin-bottom: 20px;
 }
-
-
+#medico-container{
+    margin-top:150px;
+    overflow: hidden;
+}
+#historia-cli-container{
+    margin-top:150px;
+    overflow: hidden;
+}
+#editar-medico-container{
+    margin-top:150px;
+    overflow: hidden;
+}
 /*GUARDIA*/
 #guardia-container {
     margin-top: 120px;
