--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -398,18 +398,22 @@ table thead th {
 .pagination {
     margin-bottom: 20px;
 }
-#medico-container{
-    margin-top:150px;
+
+#medico-container {
+    margin-top: 150px;
     overflow: hidden;
 }
-#historia-cli-container{
-    margin-top:150px;
+
+#historia-cli-container {
+    margin-top: 150px;
     overflow: hidden;
 }
-#editar-medico-container{
-    margin-top:150px;
+
+#editar-medico-container {
+    margin-top: 150px;
     overflow: hidden;
 }
+
 /*GUARDIA*/
 #guardia-container {
     margin-top: 120px;
@@ -562,6 +566,21 @@ table thead th {
     margin-top: 130px;
 }
 
+#puestos-create {
+    margin-top: 0;
+    /* Elimina el margen superior */
+    width: 70%;
+    height: 100vh;
+    /* Asegura que el contenedor ocupe toda la altura de la pantalla */
+    display: flex;
+    /* Utiliza flexbox */
+    justify-content: center;
+    /* Centra el contenido horizontalmente */
+    align-items: center;
+    /* Centra el contenido verticalmente */
+    margin: 0 auto;
+    /* Asegura que el contenedor tiene un margen automático para centrarse en el eje horizontal */
+}
 
 #puestos-table {
     margin-top: -20px;
